Make sure the invite people link is stuck to the bottom when the window is tall enough.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -607,6 +607,12 @@ div.left-navigation-sidebar {
       }
     }
 
+    &.navigation-sidebar-overflow {
+      position: absolute;
+      bottom: 46px;
+      padding-bottom: 0px;
+    }
+
     div.invite-people-tooltip-container {
       border: 2px dashed $carrot_gold;
       background-color: $light_gold;
